@@ -1,5 +1,8 @@
 2003-05-04  Naofumi Yasufuku  <naofumi@users.sourceforge.net>
 
+	* examples/NeHe6Multi.py (NeHe6Multi.display): Fixed texture
+	coordinates.
+
 	* examples/*.py: Clean up. Changed indent offset to 4 (default of
 	python-mode.el).
 
